Added role-user endpoints
